src/styles/base.scss
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    min-height: 100vh;
    max-width: 100%;
    position: relative;
}

body::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('../assets/figma_components/main-background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    filter: blur(1px);
    z-index: -1;
}

.game-page {
    background-image: url('../assets/figma_components/game-background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    overflow: hidden;
  }
  
.startpage-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

